Fix(Table): fix background and overflow in Table with hasParentHeight. (#789)
* fix table fit height

* css fix

* css fix

* lint fix

---------

--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -91,15 +91,23 @@
   :global(.mia-platform-table-container) {
     height: 100% !important;
   }
-
   :global(.mia-platform-table-container) {
     border: none;
+    margin: 0 -1px;
+  }
+  :global(.mia-platform-table-container)::before,
+  :global(.mia-platform-table-container)::after {
+    display: none;
+  }
+  :global(.mia-platform-table) {
+    background: none;
   }
   :global(.mia-platform-table-body) {
-    height: calc(100% - var(--table-header-height))!important;
-    border: 1px solid var(--table-border-color);
+    overflow: auto!important;
+    border: 1px solid  var(--table-border-color);
     border-bottom-left-radius: var(--shape-border-radius-md, 4px);
     border-bottom-right-radius: var(--shape-border-radius-md, 4px);
+    background: white;
   }
 }
 
